testdata/record01.reject.out
type error: can not unify
[32m'FrameBuffer V1 V0[m
with
[32m'Float[m

in "testdata/record01.reject.lc" (line 26, column 15):
 in ScreenOut record.fieldA
              ^^^^^^
